scrollbar minimap wordwrap fix

--- a/html5/style.css
+++ b/html5/style.css
@@ -148,7 +148,6 @@ section>*{
 
 #scrollbar{
     font-size: 2px;
-    overflow: hidden;
     color: #fff;
     background-color: #667;
 }
